# Folia

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: manage.py  requirements.txt
backend/folia/: settings.py  urls.py  wsgi.py
backend/folia/api/: apps.py  urls.py
backend/folia/billing/: admin.py  apps.py  models.py  quota.py  serializers.py  urls.py  views.py  xunhupay.py
backend/folia/forums/: admin.py  apps.py  models.py  serializers.py  views.py
backend/folia/sites/: admin.py  apps.py  middleware.py  models.py  permissions.py  platform_views.py  serializers.py  views.py
backend/folia/users/: admin.py  apps.py  models.py  serializers.py  views.py
backend/folia/wiki/: admin.py  ajax.py  apps.py  models.py  parser.py  permissions.py  search.py  search_views.py  serializers.py  system_pages.py  views.py
backend/folia/wiki/modules/: __init__.py  listpages.py  standard.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: api.ts  wikidot.ts
frontend/src/lib/components/: BillingPage.svelte  CreateSite.svelte  FileManager.svelte  ForumView.svelte  PageEdit.svelte  PageHistory.svelte  PageView.svelte  PlatformAdmin.svelte  SiteHome.svelte  SiteManager.svelte  (+3 more)
frontend/src/routes/: +layout.svelte
migration/: __init__.py  cli.py  config.py  pyproject.toml  requirements.txt
migration/backup_parser/: xml_parser.py
migration/importer/: bulk.py  validator.py
migration/transformer/: page.py
migration/wikidot_api/: client.py  scraper.py
(+3 files in other folders)
