[project]
name = "folia-migrate"
version = "0.1.0"
description = "Migration tool for Wikidot to Folia"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
]

[project.scripts]
folia-migrate = "migration.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
